# libosmscout-exp

./: .cproject  .gitignore  .project
Demos/src/: LocationLookup.cpp  LookupText.cpp  Makefile.am
Import/: map.ost
libosmscout/: configure.ac
libosmscout-import/include/: Makefile.am
libosmscout-import/include/osmscout/import/: GenNodeDat.h  GenNodeTextIndex.h  GenTextDat.h  GenTextIndex.h  UpdateNodeDat.h
libosmscout-import/src/: Makefile.am
libosmscout-import/src/osmscout/import/: GenAreaAreaIndex.cpp  GenAreaNodeIndex.cpp  GenAreaWayIndex.cpp  GenNodeDat.cpp  GenNodeTextIndex.cpp  GenOptimizeAreasLowZoom.cpp  GenOptimizeWaysLowZoom.cpp  GenTextDat.cpp  GenTextIndex.cpp  Import.cpp  UpdateNodeDat.cpp
libosmscout/include/: Makefile.am
libosmscout/include/osmscout/: Area.h  AreaAreaIndex.h  AreaNodeIndex.h  AreaWayIndex.h  AttributeAccess.h  Database.h  Location.h  Node.h  OptimizeWaysLowZoom.h  Route.h  RouteNode.h  TextIndex.h  TextSearch.h  TextSearchIndex.h  TypeConfig.h  Types.h  Way.h
libosmscout/include/osmscout/util/: QuadIndex.h  Reference.h  Transformation.h  utf8.h
libosmscout/parser/OST/: OST.atg
libosmscout/src/: Makefile.am
libosmscout/src/osmscout/: AreaAreaIndex.cpp  AreaNodeIndex.cpp  AreaWayIndex.cpp  Node.cpp  OptimizeWaysLowZoom.cpp  Route.cpp  TextSearch.cpp  TextSearchIndex.cpp  TypeConfig.cpp  Types.cpp
libosmscout/src/osmscout/ost/: Parser.cpp  Scanner.cpp
libosmscout/src/osmscout/util/: Projection.cpp  utf8.cpp
libosmscout/swig/: Makefile.am
libosmscout/swig/android/: AndroidManifest.xml
libosmscout/swig/android/jni/: Android.mk  Application.mk  build-android32.xml  build.xml
libosmscout/swig/java/: Makefile.am  Transformer.h  Visitors.h  array_nocpy.i  ext_location_search.i  ext_route_description.i  list.i  osmscout.i
libosmscout/swig/java/example/: LocationTest.java  LookupText.java  PoiTest.java  RoutingTest.java  Test.java  TransformerTest.java
maps/: build.sh
